# CamCapture

./: .gitignore  CMakeLists.txt  CrosshairsPainter.h  GoldenRatioPainter.h  GridPainter.h  SquarePainter.h  about.cpp  about.h  about.ui  camera.cpp  camera.h  camera.pro  camera.qrc  camera.ui  cameracapture.cpp  cameracapture.h  cameracapture.ui  cameracapturemain.cpp  cameracapturemain.h  cameracapturemain.ui  help.html  icons.qrc  imagesettings.cpp  imagesettings.h  main.cpp  metadatadialog.cpp  settings.cpp  settings.h  settings.ui  videosettings.cpp  videosettings.h
